# gen-ai-demos

./: .gitignore  02_ragging-complex-documents.ipynb  03_adaptative-graph-of-thoughts.ipynb  04_smolagents.ipynb  board-game-qa.ipynb  pyproject.toml
src/: chain_of_draft.py  reasoning.py
